--- a/scss/_music.scss
+++ b/scss/_music.scss
@@ -20,15 +20,15 @@
       margin-left: 3rem;
       margin-right: 0;
       display: inline-block;
-      width: 250px;
+      width: 80%;
       height: 200px;
       // overflow: hidden;
       h1 {
-        padding-bottom: 1rem;
+        padding-bottom: 0rem;
         font-size: 2rem;
       }
-      p {
-        // overflow: hidden;
+      .project-info {
+        width:100%;
       }
     }
   }
