--- a/scss/_music.scss
+++ b/scss/_music.scss
@@ -9,6 +9,8 @@
     padding-top: 5rem;
     padding-left: 8rem;
     height: 50%;
+    display: flex;
+    align-items: center;
     img {
       margin-left: 5rem;
     }
@@ -17,10 +19,10 @@
       width: 400px;
     }
     .album-info-wrapper {
-      margin-left: 3rem;
+      margin-left: 6rem;
       margin-right: 0;
       display: inline-block;
-      width: 80%;
+      // width: 80%;
       height: 200px;
       // overflow: hidden;
       h1 {
