start tone-quest page

--- a/scss/_vr-project.scss
+++ b/scss/_vr-project.scss
@@ -45,7 +45,7 @@
             max-width: 700px;
             min-width: 300px;
             height: auto;
-            overflow: scroll;
+            // overflow: scroll;
           }
           a {
             color: rgb(85, 217, 250);
