--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -320,7 +320,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    font-weight: 100;
+    font-weight: 200;
     h1 {
       margin-top: 10rem;
       font-size: 4rem;
@@ -623,6 +623,10 @@
         margin-bottom: 0;
         li {
           padding-left: 2rem;
+          &:hover {
+            background: $primary-color;
+            cursor: pointer;
+          }
         }
       }
     
