finish loveseat page

--- a/scss/_vr-project.scss
+++ b/scss/_vr-project.scss
@@ -29,6 +29,7 @@
             display: block;
             max-width: 100%;
             min-width: 400px;
+            // max-height: 30vh;
             border: $secondary-color 3px solid;
           }  
         }
@@ -56,5 +57,4 @@
      
     }
   }
- 
 }
