--- a/scss/main.scss
+++ b/scss/main.scss
@@ -49,6 +49,27 @@ header {
   color: $secondary-color;
 }
 
+.resume-button {
+  display: flex;
+  justify-content: center;
+  align-items:center;
+  cursor: pointer;
+  width: 250px;
+  height: 40px;
+  text-align: center;
+  border-radius: 5px;
+  font-size: 20px;
+  color:white;
+  // background: radial-gradient(circle, $secondary-color, darken($secondary-color, 10%));
+  background: $secondary-color;
+  // box-shadow: 1px 1px 2px rgba(0,0,0,0.1);
+}
+.resume-button-container{
+  padding-top: 2rem;
+  display:flex;
+  justify-content: center;
+}
+
 #nav-down {
   @include easeOut();
   position: fixed;
@@ -431,7 +452,6 @@ main {
       }
     } 
   }
-
 }
 
 // contact page
